2008-03-15  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries-1, diary-mark-entries-1):
	New functions.
	* calendar/cal-bahai.el (number, original-date, add-to-diary-list)
	(diary-name-pattern, mark-calendar-days-named): Remove declarations.
	(diary-list-entries-1, diary-mark-entries-1): Autoload.
	(diary-bahai-list-entries): Use diary-list-entries-1.
	(diary-bahai-mark-entries): Doc fix.  Use diary-mark-entries-1.
	* calendar/cal-hebrew.el (number, original-date, add-to-diary-list)
	(diary-name-pattern, mark-calendar-days-named): Remove declarations.
	(diary-list-entries-1, diary-mark-entries-1): Autoload.
	(list-hebrew-diary-entries): Use diary-list-entries-1.
	(mark-hebrew-diary-entries): Doc fix.  Use diary-mark-entries-1.
	* calendar/cal-islam.el (number, original-date, add-to-diary-list)
	(diary-name-pattern, mark-calendar-days-named): Remove declarations.
	(diary-list-entries-1, diary-mark-entries-1): Autoload.
	(list-islamic-diary-entries): Use diary-list-entries-1.
	(mark-islamic-diary-entries): Doc fix.  Use diary-mark-entries-1.

	* calendar/appt.el (appt-check, appt-delete, appt-make-list): Use caar.

	* calendar/cal-bahai.el (calendar-bahai-epoch): Doc fix.

	* calendar/cal-china.el (number-chinese-months)
	(calendar-chinese-from-absolute): Use nth, caar.

	* calendar/cal-coptic.el (coptic-calendar-epoch): Doc fix.

	* calendar/cal-french.el (french-calendar-accents): Doc fix.

	* calendar/cal-hebrew.el (calendar-hebrew-month-name-array-common-year)
	(calendar-hebrew-month-name-array-leap-year)
	(hebrew-calendar-parashiot-names): Make constants.
	(diary-parasha): Move definition after constants it uses.

	* calendar/cal-html.el (cal-html-insert-link-yearpage)
	(cal-html-htmlify-list): Doc fix.
	(cal-html-htmlify-entry): Use nth.

	* calendar/cal-islam.el (calendar-islamic-month-name-array)
	(calendar-islamic-epoch): Make constants.
	(calendar-islamic-epoch): Doc fix.

	* calendar/cal-menu.el (cal-menu-goto-menu): Use "Go To".
